--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 :root{
---cor-fundo:#fc6704;
+--cor-fundo:#0088fe;
 --cor-principal: #0b0d20;
 --cor-secundaria: #f40000; 
---cor-texto: #00a6ff;
+--cor-texto: #ff8800;
 --cor-destaque: #40ff00;
 }
