--- a/style.css
+++ b/style.css
@@ -5,3 +5,13 @@
 --cor-texto: #ff8800;
 --cor-destaque: #40ff00;
 }
+
+body{
+
+    background-color: var(--cor-fundo);
+    color:var(--cor-texto);
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
